# pe-av-syncnet

./: README.md  pyproject.toml
src/syncnet/: __init__.py  config.py  datamodule.py  lightning_module.py
src/syncnet/datasets/: __init__.py  dataset.py
src/syncnet/modeling/: __init__.py  model.py
src/syncnet/scripts/: __init__.py  train.py
tests/: test_sample.py
